--- a/css/index.css
+++ b/css/index.css
@@ -3,68 +3,27 @@
     font-family: Roboto;
     src: url(../assets/fonts/Roboto-Regular.ttf);
 }
+
+* {
+    cursor: url(../assets/imgs/cursor.png), pointer;
+}
+
 body {
     background-color: rgb(47, 47, 92);
     overflow: hidden;
     font-family: Roboto;
     color: rgb(196, 57, 117);
-}
-
-#logo-wrapper {
-    width: 400px;
-    height: 400px;
+    text-align: center;
     position: relative;
-    margin: auto;
-    top: -400px;
-
-    transition: 2s;
 }
 
-.stick {
+.screen {
+    transition: 1s;
     position: absolute;
-    width: 100%;
-    height: 5px;
-
-    background-color: rgb(196, 57, 117);
-    transition: 2s;
 }
 
-#stick-left {
-    top: 235px;
-    left: -100vw;
-}
-
-#stick-right {
-    right: -100vw;
-    top: 342px;
-}
-
-#weAre {
-    position: absolute;
-    font-size: 45px;
-    top: 55px;
-    right: 400px;
-    opacity: 0;
-    transition: 2s;
-}
-
-#andWe {
-    white-space: nowrap;
-    position: absolute;
-    font-size: 45px;
-    top: 350px;
-    left: 250px;
-    opacity: 0;
-    transition: 2s;
-}
-
-#wordsSpan {
-    font-weight: bold;
+.cursor {
     color: rgb(196, 57, 117);
-}
-
-#cursor {
-    height: 50px;
-    width: 15px;
     background-color: rgb(196, 57, 117);
+    font-weight: bold;
 }
