--- a/css/lib.css
+++ b/css/lib.css
@@ -99,8 +99,15 @@
     min-height: 100vh;
 }
 
+.imgWrapper {
+    position: relative;
+    overflow: hidden;
+}
+
 .imgFormat {
     position: absolute;
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
 }
